--- a/examples/bipartit-matching/tlc.cfg
+++ b/examples/bipartit-matching/tlc.cfg
@@ -1,22 +1,27 @@
 SPECIFICATION FairSpec
 
 CONSTANTS
-  LeftNodes = 1..3
-  RightNodes = 1..3
+  LeftNodes = {l1, l2, l3}
+  RightNodes = {r1, r2, r3}
   Edges =
-    {
-      <<1,1>>, <<1,2>>,
-      <<2,2>>,
-      <<3,2>>, <<3,3>>
-    }
+  {
+    <<l1, r1>>,
+    <<l1, r2>>,
+    <<l2, r2>>,
+    <<l3, r3>>
+  }
 
 INVARIANTS
   GraphOK
   TypeOK
-  MatchingSubsetOfGraph
   NoSharedEndpoints
-  CoverHitsMatchingEdges
+  MatchingSubsetOfGraph
+  CoverHitsAllEdges
+  SizeEquality
 
 PROPERTIES
   ReachGoal
   InitialConditionOK
+
+CHECK_DEADLOCK FALSE
+
